# cpp-docker-stack

./: .dockerignore  .gitignore  README.md  docker-compose.yaml
backend/: CMakeLists.txt  CMakePresets.json  Dockerfile
backend/src/: server.cpp
scripts/: run.sh  setup.sh  toggle_secrets.sh
secrets/: .dev.postgres_password.secrets.enc  .int.postgres_password.secrets.enc  .prod.postgres_password.secrets.enc  .sops.yaml
